# embedded_alice

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cc
src/dsp/: dsp_parameters.h  dsp_phasor_bank.c  dsp_phasor_bank.h  dsp_rng.c  dsp_rng.h  dsp_rrc_filter.c  dsp_rrc_filter.h  dsp_types.h  dsp_zc_generator.c  dsp_zc_generator.h
tests/: CMakeLists.txt  test_dsp.cc  testdata_path.h.in
tests/testdata/: zc.tsv
tools/: plot_signal.py
